static: styles: fix overflowing commit SHA
Otherwise you get ugly horizontal scrolling on small
horizontal viewports

--- a/src/style.css
+++ b/src/style.css
@@ -109,4 +109,5 @@ footer {
   font-family: var(--font-mono);
   font-size: 0.85em;
   margin-top: 2em;
+  overflow-wrap: anywhere;
 }
